...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AaD-4p-vAZ">
                                <rect key="frame" x="274" y="283" width="53" height="34"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <state key="normal" title="Log In"/>
                                <connections>
                                    <action selector="logIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JPS-Eo-dhZ"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u9e-4A-yRC">
                                <rect key="frame" x="20" y="248" width="560" height="30"/>
...
                                <animations/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="49" id="6et-Iu-cGW"/>
                                </constraints>
                                <items>
                                    <tabBarItem title="InfoSessions" image="infoSessionTabBar" id="M2r-oY-Dsw" userLabel="InfoSessions"/>
                                    <tabBarItem tag="1" title="Account" image="accountTabBat" id="pfn-CZ-zar" userLabel="Account"/>
                                    <tabBarItem tag="2" systemItem="search" id="b1k-MW-sK4"/>
                                    <tabBarItem tag="3" title="UW Map" image="MapTabBar" id="ltk-oI-YfV"/>
                                </items>
                            </tabBar>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
...
                            <constraint firstItem="1On-B8-RO5" firstAttribute="leading" secondItem="Rlx-NB-kS4" secondAttribute="leading" id="52C-P5-ayo"/>
                            <constraint firstItem="1On-B8-RO5" firstAttribute="top" secondItem="Rlx-NB-kS4" secondAttribute="top" id="asl-nC-8st"/>
                            <constraint firstItem="NYb-F8-wbz" firstAttribute="top" secondItem="1On-B8-RO5" secondAttribute="bottom" id="d49-U8-WWp"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="uaw-oN-Sx4">
                        <barButtonItem key="leftBarButtonItem" title="back" id="ihE-aT-jAp">
                            <connections>
                                <action selector="backToInfoSession:" destination="57B-Vv-AmP" id="DYB-4E-T62"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" id="A4a-ZV-Bba">
                            <connections>
...
                            <constraint firstItem="A4Q-Fz-NN9" firstAttribute="top" secondItem="FpF-SB-WMX" secondAttribute="top" id="seM-6x-v6b"/>
                            <constraint firstItem="A4Q-Fz-NN9" firstAttribute="leading" secondItem="FpF-SB-WMX" secondAttribute="leading" id="stK-3r-cIT"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="ngu-I4-HJG">
                        <nil key="title"/>
                        <barButtonItem key="leftBarButtonItem" title="clear" id="84r-GQ-LNx">
                            <connections>
                                <action selector="clear:" destination="tB7-wV-KgW" id="vMk-xB-5gf"/>
                            </connections>
                        </barButtonItem>
                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="g6o-aX-0oB">
                            <rect key="frame" x="180" y="5.5" width="240" height="33"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <animations/>
                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                            <state key="normal" title="UW Buildings Catalog">
                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            </state>
                            <connections>
                                <action selector="backToUW" destination="tB7-wV-KgW" eventType="touchUpInside" id="mIK-mR-Hfx"/>
                            </connections>
                        </button>
...
