...
				settingCell.configureSettingButton("reset password", titleColor: UIColor.blackBlue())
				return settingCell
			}
      
		default:
      settingCell.selectionStyle = .Gray
			settingCell.configureSettingButton("account log out", titleColor: UIColor.redColor())
			return settingCell
		}
		
	}
}

...
